...
            </Text>
            <Button
              variant="tertiary"
              size="small"
              label={t('auth.signUp.signInButton')}
              onPress={() => router.replace('/(auth)/sign-in')}
              testID="sign-in-link"
            />
          </View>

          <Text
            className="text-caption text-text-secondary text-center px-2 mb-8"
            testID="sign-up-terms-copy"
...
